Styling optimization and contrast fixes.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,16 +11,14 @@ body {
 header {
     background-color: #3e372d;
     border-radius: 25px;
-    padding: 10px;
+    padding: 15px;
     margin: 20px;
-    display: grid;
     box-shadow: 5px 5px 10px 2px rgb(0 0 0/0.25);
     max-height: 200px;
 }
 
 header div{
-    display: grid;
-    grid-template-columns:  1fr 1fr 1fr 1fr 1fr;
+    display: flex;
 }
 
 img {
@@ -29,12 +27,10 @@ img {
     border-radius: 25px;
     max-width: 70px;
     max-height: 120px;
-    grid-column: 1/2;
 }
 
 h1 {
     font-size: 1.5rem;
-    grid-column: 3/5;
     display: block;
     margin: auto;
 }
@@ -52,12 +48,26 @@ div{
     margin: 10px;
 }
 
-ol{
-    background-color: cornflowerblue;
+
+ul{
+    background-color: whitesmoke;
     border-radius: 5px;
     box-shadow: 5px 5px 10px 2px rgb(0 0 0/0.25);
-    padding: 5px;
     margin: 15px;
+    padding: 15px;
+    border: cornflowerblue solid 15px;
+    border-radius:25px ;
+}
+
+ul a{
+    display: block;
+    margin: 5px;
+}
+
+ul p{
+    display: block;
+    margin: 5px;
+    color: #3e372d;
 }
 
 footer{
